fix #50 group name shifted

--- a/src/styles/taggle/_lod.scss
+++ b/src/styles/taggle/_lod.scss
@@ -40,6 +40,7 @@
       [data-renderer=group] {
         visibility: visible !important;
         overflow: visible !important;
+        position: relative;
 
         > * {
           position: absolute;
